completed comparison examples
updated BioPortal rest signatures to support URLs as concept ids, also url encoding parameters now

WARNING: this change breaks hierarchy services for BioPortal. Reported and waiting for a fix.

git-svn-id: http://www.ontocat.org/svn/trunk@186 f0dfcaea-3b95-4152-9e97-e99b8c58adb7